--- a/src/main/resources/templates/page/cn/cfp.html
+++ b/src/main/resources/templates/page/cn/cfp.html
@@ -75,9 +75,11 @@
             </strong>
           </p>
           <div class="mb-10">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）被Nature
-              Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议；且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表。现面向国内外学者征收相关领域论文，<strong>如您有意向发表SCI、EI期刊论文（非会议论文，正刊版面）及ISTP（CPCI-S）收录检索的会议论文，</strong>请尽早完成初稿的提交。
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表。现面向国内外学者征收相关领域论文，<strong>如您有意向发表SCI、EI期刊论文（非会议论文，正刊版面）及ISTP（CPCI-S）收录检索的会议论文，</strong>请尽早完成初稿的提交。
             </p>
+						<!--p>
+							被NatureEvents（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议；且
+						</p-->	
           </div>
 					<div class="mb-10">
             <strong>一、发表介绍</strong>
