--- a/src/main/resources/templates/page/cn/registration.html
+++ b/src/main/resources/templates/page/cn/registration.html
@@ -80,7 +80,7 @@
           1. <a class="pointer" href="/cn/submit" target="_blank" style="color: #102cf7"><u><strong>通过在线报名页面提交参会信息(初始文档需小于10MB)</strong></u></a>，并选择参会类型
         </p>
 				<p>
-					2. 如在线提交失败，可下载并填写<a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com
+					2. 如在线提交失败，可下载并填写<a class="pointer" href="/cn/download/ICABST-Registration-Form-cn.xlsx" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com
 				</p>
         <p>
           3. 我方会在一周内与您核对相关信息并提供相关材料（如会议通知、录用函等）
@@ -100,7 +100,9 @@
         <p>
           注：2. 如有参会者提前需要邀请函、录用函或其他相关材料，请将相关请求发至会务邮箱icabst@apanse.com
         </p>
-
+        <p>
+          注：3. 请按需点击下载<a href="/cn/download/ICABST-Abstract-Template.doc" target="_blank" style="color: #102cf7"><u>摘要模板</u></a> 及 <a href="/cn/download/ICABST-Poster-Template.pptx" target="_blank" style="color: #102cf7"><u>张贴海报制作模板</u></a>
+        </p>
 
       </div>
 
