--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -95,8 +95,8 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会主办。<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
+					<!--p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收	录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。<br/><p-->
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
         </p>
       </div>
 			</div>
@@ -109,7 +109,7 @@
 					<li><a href="/cn/submit" target="_blank" style="color: #102cf7"><u>在线提交参会信息入口已开放，请尽早提交参会信息</u></a></li>
 					<li><a href="/cn/program" target="_blank" style="color: #102cf7"><u>大会详细时间安排已初步完成</u></a></li>
           <li><a href="/cn/about" target="_blank" style="color: #102cf7"><u>本届会议议题已定，将分为7个session召开</u></a></li>
-					<li><a href="/cn/organization" target="_blank" style="color: #102cf7"><u>本届会议已得到若干学术单位、媒体支持</u></a></li>
+					<!--li><a href="/cn/organization" target="_blank" style="color: #102cf7"><u>本届会议已得到若干学术单位、媒体支持</u></a></li-->
 					<li><a href="/cn/venue" target="_blank" style="color: #102cf7"><u>签证、及会场周边住宿信息请“会议地点”</u></a></li>
         </ul>
         <div class="clear"></div>
@@ -120,9 +120,9 @@
         <div class="url pd-5">
           <ul>
             <li ><a class="time pl-30 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>倒计时:&nbsp;<span id="content"></span>&nbsp;&nbsp;&nbsp;天</strong></a></li>
-            <li ><a class="announcement" href="/cn/download/meetingPropaganda.pdf" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
-            <li ><a class="invitation" href="/cn/download/Rrgistration.docx" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
-						<li ><a class="article" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>摘要模板</strong></a></li>
+            <li ><a class="announcement" href="/cn/download/flyer.pdf" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
+            <li ><a class="invitation" href="/cn/download/ICABST-Registration-Form-cn.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
+						<li ><a class="article" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank">&emsp;&emsp;&emsp;<strong>摘要模板</strong></a></li>
           </ul>
           <div class="clear"></div>
         </div>
@@ -133,7 +133,7 @@
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
 			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article/" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
 					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
@@ -176,13 +176,16 @@
     <div class="f-20 f-b pl-10 background1">合作单位</div>
     <ul>
       <li><img src="../img/1--APANSE.png"/></li>
-      <li><img src="../img/2--nature-events.png"/></li>
-      <li><img src="../img/3--cnki-logo.gif"/></li>
-      <li><img src="../img/4--sciencemeeting-logo.jpg"/></li>
-      <li><img src="../img/5--bwp-logo.png"/></li>
-      <li><img src="../img/6--LOGO_EBW.jpg"/></li>
+      <li><a href="https://www.nature.com/natureevents/science/events/91255-International_Conference_on_Advances_in_Biological_Science_and_Technology" target="_blank"><img src="../img/2--nature-events.png"/></li>
+      <!--li><img src="../img/3--cnki-logo.gif"/></li>
+      <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
+      <li><a href="http://www.brownwalker.com/event/22133" target="_blank"><img src="../img/5--bwp-logo.png"/></a></li>
+      <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
 			<li><img src="../img/7--IOP.png"/></li>
 			<li><img src="../img/8--AIP.png"/></li>
+			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
+			<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
+			<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
       <div class="clear"></div>
     </ul>
   </div>
