--- a/src/main/resources/templates/page/cn/organization.html
+++ b/src/main/resources/templates/page/cn/organization.html
@@ -158,13 +158,16 @@
        <div class="hxx"></div>
       <ul>
         <li><img src="../img/1--APANSE.png"/></li>
-        <li><img src="../img/2--nature-events.png"/></li>
-        <li><img src="../img/3--cnki-logo.gif"/></li>
-        <li><img src="../img/4--sciencemeeting-logo.jpg"/></li>
-        <li><img src="../img/5--bwp-logo.png"/></li>
-        <li><img src="../img/6--LOGO_EBW.jpg"/></li>
+        <li><a href="https://www.nature.com/natureevents/science/events/91255-International_Conference_on_Advances_in_Biological_Science_and_Technology" target="_blank"><img src="../img/2--nature-events.png"/></li>
+        <!--li><img src="../img/3--cnki-logo.gif"/></li>
+        <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
+        <li><a href="http://www.brownwalker.com/event/22133" target="_blank"><img src="../img/5--bwp-logo.png"/></a></li>
+        <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
 				<li><img src="../img/7--IOP.png"/></li>
 				<li><img src="../img/8--AIP.png"/></li>
+				<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
+				<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
+				<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
         <div class="clear"></div>
       </ul>
       </div>
