--- a/src/main/resources/templates/page/cn/submit.html
+++ b/src/main/resources/templates/page/cn/submit.html
@@ -71,7 +71,7 @@
             <div class="public_p pb-20 pl-30">
                     <p>1. 所有学者提交的参会信息都将做保密处理</p>
                     <p>2. 通过如下表格在线提交参会信息完成预注册</p>
-                    <p>3. 如在线提交失败，可下载并填写<a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com</p>
+                    <p>3. 如在线提交失败，可下载并填写<a class="pointer" href="/cn/download/ICABST-Registration-Form-cn.xlsx" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com</p>
                     <p>4. 在提交成功后，大会将在1-2个工作日内为您反馈相关信息</p>
             </div>
             <div class="background4" style="padding-left:55px; padding-bottom: 10px;">在线提交</div>
