修改网页文本内容及附件内容(flyer, 注册信息表, 摘要模板等) 以及组织机构的图片和链接

--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=1200" name="viewport">
-
+  <meta name="shenma-site-verification" content="3f527c71e3b8bd47c35ed86f522b29af_1561971198"> 
   <title>ICABST2019</title>
   <meta name="keywords" content="ICABST2019"/>
   <meta name="description" content="ICABST2019"/>
@@ -107,7 +107,7 @@
 					to Myanmar, Laos, Cambodia, Vietnam, Singapore, Malaysia and Indonesia. Thailand is without a doubt one of the most exotic destinations in Asia.
 					<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please circulate ICABST2019 to the attention of any of your colleagues who may be interested in participating 
-					(<a href="/cncfp" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
+					(<a href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
 					We sincerely invite you to join us and hope you will have a fruitful experience during your stay in Thailand! 
         </p>
       </div>
@@ -130,9 +130,9 @@
         <div class="url pd-5">
           <ul>
             <li ><a class="time pl-25 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>Countdown:&nbsp;<span id="content"></span>&nbsp;&nbsp;days</strong></a></li>
-            <li ><a class="announcement" href="/about" target="_blank">&emsp;&emsp;&emsp;<strong>Conference Flyer</strong></a></li>
-            <li ><a class="invitation" href="/cncfp" target="_blank">&emsp;&emsp;&emsp;<strong>Registration Form</strong></a></li>
-						<li ><a class="article" href="/cncfp" target="_blank">&emsp;&emsp;&emsp;<strong>Abstract Templete</strong></a></li>
+            <li ><a class="announcement" href="/cn/download/flyer.pdf" target="_blank">&emsp;&emsp;&emsp;<strong>Conference Flyer</strong></a></li>
+            <li ><a class="invitation" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>Registration Form</strong></a></li>
+						<li ><a class="article" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank">&emsp;&emsp;&emsp;<strong>Abstract Templete</strong></a></li>
           </ul>
           <div class="clear"></div>
         </div>
@@ -142,10 +142,10 @@
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
@@ -185,13 +185,16 @@
     <div class="f-20 f-b pl-10 background1">Supporters / Media Partners</div>
     <ul>
       <li><img src="../img/1--APANSE.png"/></li>
-      <li><img src="../img/2--nature-events.png"/></li>
-      <li><img src="../img/3--cnki-logo.gif"/></li>
-      <li><img src="../img/4--sciencemeeting-logo.jpg"/></li>
-      <li><img src="../img/5--bwp-logo.png"/></li>
-      <li><img src="../img/6--LOGO_EBW.jpg"/></li>
+      <li><a href="https://www.nature.com/natureevents/science/events/91255-International_Conference_on_Advances_in_Biological_Science_and_Technology" target="_blank"><img src="../img/2--nature-events.png"/></li>
+      <!--li><img src="../img/3--cnki-logo.gif"/></li>
+      <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
+      <li><a href="http://www.brownwalker.com/event/22133" target="_blank"><img src="../img/5--bwp-logo.png"/></a></li>
+      <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
 			<li><img src="../img/7--IOP.png"/></li>
 			<li><img src="../img/8--AIP.png"/></li>
+			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
+			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/10--billetto.png"/></a></li>
+			<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
       <div class="clear"></div>
     </ul>
   </div>
