--- a/src/main/resources/templates/page/en/registration.html
+++ b/src/main/resources/templates/page/en/registration.html
@@ -76,7 +76,7 @@
         </p>
         <p>
           1. Make submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System(Less than 10MB)</strong></u></a>, and choose registration type<br/>
-					Or download the <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.
+					Or download the <a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.
         </p>
         <p>
           2. The abstract will be processed for peer review by conference committee, if accepted the Acceptance Letter and Invoice will be issued in 7-10 working days.
@@ -159,10 +159,10 @@
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
