--- a/src/main/resources/templates/page/en/submission.html
+++ b/src/main/resources/templates/page/en/submission.html
@@ -73,10 +73,10 @@
 					<p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing about 300-350 words.</p>
 					<p>2. All Submissions should be in English, and no other language is acceptable.</p>
 					<p>3. Make submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System</strong></u></a>. All required information is needed to finish the registration.</p>
-					<p>4. Or download the <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.</p>
+					<p>4. Or download the <a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.</p>
 					<p>5. After submission, the conference secretary will contact you in about 2 working days.</p>
 					<p>5. All accepted abstracts will be printed in Conference Program and Abstract Book.</p>
-					<p>6. Please click to download the <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u><strong>"Abstract Templete"</strong></u></a>.</p>
+					<p>6. Please click to download the <a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank" style="color: #102cf7"><u><strong>"Abstract Templete"</strong></u></a>.</p>
 				</div>
 
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Presentation Type</div>
@@ -87,7 +87,7 @@
           </p>
           <p>
             <strong>Poster Presentation</strong>: Posters will be displayed as a portrait of A1 (594mm width ×841mm length) size. 
-          	Presenters are requested to make the poster by themselves <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>(Poster Templete)</u></a> and hand it to conference secretary while check-in.
+          	Presenters are requested to make the poster by themselves <a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank" style="color: #102cf7"><u>(Poster Templete)</u></a> and hand it to conference secretary while check-in.
 						Presenter is required to stand by his/her poster. All presenters are responsible for removing their posters after presentation time.
           </p>
           <p>
@@ -119,10 +119,10 @@
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
