--- a/src/main/resources/templates/page/en/about.html
+++ b/src/main/resources/templates/page/en/about.html
@@ -81,13 +81,13 @@
 						 ICABST2019 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
 						 The conference certification will be issued to all attendees including listeners. 
 					</p>
-					<p>
+					<!--p>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;For all submitted abstracts, after peer review, accepted ones will be printed in conference program and abstract book. 
 					ICABST2019 has been collected by Nature Events (www.nature.com), ScienceNet, CNKI, AIP Conference Proceedings, IOP Conference Series and other academic affiliations.
-					</p>
+					</p-->
 					<p>
 					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please circulate ICABST2019 to the attention of any of your colleagues who may be interested in participating 
-						(<a href="/cncfp" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
+						(<a href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
 						We sincerely invite you to join us and hope you will have a fruitful experience during your stay in Thailand! 
 					</p>
           <p>
@@ -149,9 +149,9 @@
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
 			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-					<li><a class="pointer" href="/article" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-					<li><a class="pointer" href="/article" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
