--- a/src/main/resources/templates/page/en/organizer.html
+++ b/src/main/resources/templates/page/en/organizer.html
@@ -155,13 +155,16 @@
        <div class="hxx"></div>
       <ul>
         <li><img src="../img/1--APANSE.png"/></li>
-        <li><img src="../img/2--nature-events.png"/></li>
-        <li><img src="../img/3--cnki-logo.gif"/></li>
-        <li><img src="../img/4--sciencemeeting-logo.jpg"/></li>
-        <li><img src="../img/5--bwp-logo.png"/></li>
-        <li><img src="../img/6--LOGO_EBW.jpg"/></li>
+        <li><a href="https://www.nature.com/natureevents/science/events/91255-International_Conference_on_Advances_in_Biological_Science_and_Technology" target="_blank"><img src="../img/2--nature-events.png"/></li>
+        <!--li><img src="../img/3--cnki-logo.gif"/></li>
+        <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
+        <li><a href="http://www.brownwalker.com/event/22133" target="_blank"><img src="../img/5--bwp-logo.png"/></a></li>
+        <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
 				<li><img src="../img/7--IOP.png"/></li>
 				<li><img src="../img/8--AIP.png"/></li>
+				<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
+				<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
+				<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
         <div class="clear"></div>
       </ul>
       </div>
@@ -170,11 +173,11 @@
     <div class="page_right col-4-1 fr mr-25 lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
-			    <div class="clear"></div>
+			  <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			  <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			  <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
+			  <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			  <div class="clear"></div>
 			  </ul>
 			</div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
