--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -175,10 +175,10 @@
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
