--- a/src/main/resources/templates/page/en/submit.html
+++ b/src/main/resources/templates/page/en/submit.html
@@ -73,7 +73,7 @@
                     <p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing at least 200 words.</p>
 					<p>2. All Submissions should be in English, and no other language is acceptable.</p>
                     <p>3. You should fill all the information needed to finish the registration.</p>
-                    <p>4. Or you can download the <a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract and CV.</p>
+                    <p>4. Or you can download the <a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract and CV.</p>
                     <p>5. After submission, the conference secretary will contact you in about 2 working days.</p>
             </div>
             <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Online Submission System</div>
@@ -376,10 +376,10 @@
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cnsubmit" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cnarticle" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
