增加文本内容

--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -68,6 +68,13 @@
 
   <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
+			<div class="background4" style="padding-left:55px; padding-bottom: 10px;">Call for Speakers</div>
+			<p>
+				All colleagues are welcomed to submit abstracts and make oral/poster presentations at ICABST2019! All oral presentations are to be delivered in English, and will be duration of 20-25 minutes. We will select qualified oral presentations after review. More qualified speakers will be announced soon after confirmation. To be a speaker of ICABST2019, please submit your abstract at an early date. </br>
+				</br>
+				* Please be aware that we will NOT contact speakers / participants in in authoritative way regarding their travel and accommodations. </br>
+				* Please keep in mind the authorities’ contact: icabst@apanse.com; Tel: +86 371 63226982.
+			</p>
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Speakers List</div>
       <!--dl>
         <div class="fl col-4-4" style="display: table;">
