--- a/src/main/resources/templates/page/en/about.html
+++ b/src/main/resources/templates/page/en/about.html
@@ -71,7 +71,7 @@
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">About</div>
         <div class="public_p pb-20 pl-30">
 					<p>
-					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Aisa-Pacific Association of Natural Science and Technology,
+					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Technology,
 						will be held in Bangkok, Thailand during December 26-28, 2019. 
 					</p>
 					<p>
