--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -92,7 +92,7 @@
         <div class="background5" style="padding-left:55px;">About</div>
 				<div class="public_p pl-30">
         <p>
-          <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Aisa-Pacific Association of Natural Science and Technology,
+          <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Technology,
 					will be held in Bangkok, Thailand during December 26-28, 2019. ICABST2019 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
 					The conference certification will be issued to all attendees including listeners. 
 					<br/>
