--- a/src/main/resources/templates/page/cn/organization.html
+++ b/src/main/resources/templates/page/cn/organization.html
@@ -127,7 +127,7 @@
 					<p>
 					Agnès Drochon, National Center for Scientific Research, France <br/>
 					Ahmad Zahedi James, Cook University, Australia <br/>
-					Alex Liu, Aisa-Pacific Association of Natural Science and Engeineering, China <br/>
+					Alex Liu, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					AMAL AL-ABOUDI, University of Jordan, Jordan <br/>
 					Andrea Scribante, University of Pavia, Italy <br/>
 					Ching-An Peng, University of Idaho, USA <br/>
@@ -136,7 +136,7 @@
 					Farhad Memarzadeh, National Institutes of Health, USA <br/>
 					Fatchiyah M.Kes., Universitas Brawijaya, Indonesia <br/>
 					Gohar Mushtaq, King Abdulaziz University, Saudi Arabia <br/>
-					Jason Guowei Sun, Aisa-Pacific Association of Natural Science and Engeineering, China <br/>
+					Jason Guowei Sun, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					Le Nguyen Quoc Khanh, Nanyang Technological University, Singapore <br/>
 					Maria Prados-Privado, Universidad Carlos III de Madrid, Spain <br/>
 					Midhat Nabil Ahmad Salimi, Universiti Malaysia Perlis (UniMAP), Malaysia <br/>
