添加speakers.xml访问 添加发票类型

--- a/src/main/resources/templates/page/cn/submit.html
+++ b/src/main/resources/templates/page/cn/submit.html
@@ -266,9 +266,9 @@
                             </div>
                         </div>
 						<div class="layui-form-item pr-20">
-						    <label for="paymentId"  class="layui-form-label"><span class="x-red">*</span>发票类型</label>
-						    <div id="paymentId" class="layui-input-block">
-						        <select name="payment" lay-verify="required" lay-filter="aihao">
+						    <label for="invoiceId"  class="layui-form-label"><span class="x-red">*</span>发票类型</label>
+						    <div id="invoiceId" class="layui-input-block">
+						        <select name="invoice" lay-verify="required" lay-filter="aihao">
 						            <option value="0"></option>
 									<option value="无需发票">无需发票</option>
 									<option value="国际发票">国际发票</option>
