更新文本内容

--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=1200" name="viewport">
   <meta name="shenma-site-verification" content="3f527c71e3b8bd47c35ed86f522b29af_1561971198"> 
+	<meta name="sogou_site_verification" content="hDnpiVhTgo"/>
   <title>ICABST2019</title>
   <meta name="keywords" content="ICABST2019"/>
   <meta name="description" content="ICABST2019"/>
