--- a/src/main/resources/templates/page/cn/organization.html
+++ b/src/main/resources/templates/page/cn/organization.html
@@ -101,23 +101,20 @@
 				<div class="public_p pb-20 pl-30 lh-20">
 					<p>
 					Abdullah Al Mamun, IIUM Gombak, Malaysia <br/>
-					Ahmed Saber Abu-zaiton, Al-albayt University, Jordan <br/>
+					Andrea Scribante, University of Pavia, Italy <br/>
 					Anna Ardévol, Universitat Rovira i Virgili, Spain <br/>
+					Ching-An Peng, University of Idaho, USA <br/>
+					Christophis Koroneos , University of Western Macedonia, Greece <br/>
+					Dinh-Toi Chu, University of Oslo, Norway <br/>
 					Domenico Lombardo, CNR - (Consiglio Nazionale delle Ricerche), Italy <br/>
+					Farhad Memarzadeh, National Institutes of Health, USA <br/>
 					Gary Sweeney, York University, Canada <br/>
 					Gerrit Schüürmann, Technical University Bergakademie Freiberg, Germany <br/>
-					Gon Park, Korea Land and Geospatial InformatiX Corporation, Korea <br/>
-					Ivaylo Christov, Institute of Biophysics and Biomedical Engineering, Bulgaria <br/>
-					Katarzyna Hys, Opole University of Technology, Poland <br/>
-					Kesaven Bhubalan, Universiti Malaysia Terengganu, Malaysia <br/>
+					Gohar Mushtaq, King Abdulaziz University, Saudi Arabia <br/>
+					Jason Guowei Sun, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					Khalid Rehman Hakeem, Universiti Putra, Malaysia <br/>
 					KIKUCHI Masumi, University of Tokyo, Japan <br/>
-					Kishwar Ali, University of Reading, United Kingdom <br/>
-					Leyser Rodrigues Oliveira University Centre of Formiga, Brazil <br/>
-					Mohammed O. Abdulsattar, University of hull, UK <br/>
-					Müberra YÜKSEL, Kadir Has University, Turkey <br/>
-					Pajaree Thongsanit, Naresuan University, Thailand <br/>
-					Roshni Paul, Birmingham City University, UK <br/>
+					Nagendra Kumar Kaushik, Kwangwoon University, Korea <br/>
 					Suhaimi Suratman, Institute of Oceanography and Environment, Malaysia <br/>
 					Thi Thuy Pham, VNU-University of Science, Vietnam <br/>
 			    </p>
@@ -126,30 +123,22 @@
       <div class="public_p pb-20 pl-30 lh-20">
 					<p>
 					Agnès Drochon, National Center for Scientific Research, France <br/>
-					Ahmad Zahedi James, Cook University, Australia <br/>
+					Ahmad Zahedi, James Cook University, Australia <br/>
+					Ahmed Saber Abu-zaiton, Al-albayt University, Jordan <br/>
 					Alex Liu, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					AMAL AL-ABOUDI, University of Jordan, Jordan <br/>
-					Andrea Scribante, University of Pavia, Italy <br/>
-					Ching-An Peng, University of Idaho, USA <br/>
-					Christophis Koroneos , University of Western Macedonia, Greece <br/>
-					Dinh-Toi Chu, University of Oslo, Norway <br/>
-					Farhad Memarzadeh, National Institutes of Health, USA <br/>
-					Fatchiyah M.Kes., Universitas Brawijaya, Indonesia <br/>
-					Gohar Mushtaq, King Abdulaziz University, Saudi Arabia <br/>
-					Jason Guowei Sun, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
+					Ivaylo Christov, Institute of Biophysics and Biomedical Engineering, Bulgaria <br/>
+					Katarzyna Hys, Opole University of Technology, Poland <br/>
+					Kesaven Bhubalan, Universiti Malaysia Terengganu, Malaysia <br/>
 					Le Nguyen Quoc Khanh, Nanyang Technological University, Singapore <br/>
+					Leyser Rodrigues Oliveira University Centre of Formiga, Brazil <br/>
 					Maria Prados-Privado, Universidad Carlos III de Madrid, Spain <br/>
 					Midhat Nabil Ahmad Salimi, Universiti Malaysia Perlis (UniMAP), Malaysia <br/>
 					Mohsen Sharifi, US-FDA , United States <br/>
-					Nagendra Kumar Kaushik, Kwangwoon University, Korea <br/>
-					Neil Egloso, Palompon Institute of Technology, Phillipines <br/>
-					S. Palanisamy, International Medical University(IMU), Malaysia <br/>
-					Sharmin Sultana, University of Malaya, Malaysia <br/>
-					Syahrida Dian Ardhany, Muhammadiyah University of Palangkaraya, Indonesia <br/>
-					Waheed Ali Panhwar, University of Sindh, Pakistan <br/>
-					Wong Tsun Tat, The Hong Kong Polytechnic University, Hong Kong <br/>
-					Yudi F. Arifin, Lambung Mangkurat University, Indonesia <br/>
-					Zeki Ayag, Kadir Has University, Turkey
+					Müberra YÜKSEL, Kadir Has University, Turkey <br/>
+					Pajaree Thongsanit, Naresuan University, Thailand <br/>
+					Palanisamy Sivanandy, International Medical University(IMU), Malaysia<br/>
+					Roshni Paul, Birmingham City University, UK
         </p>
 				</div>
 
