--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta content="width=1200" name="viewport">
   <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
   <title>ICABST2019</title>
-  <meta name="keywords" content="ICABST2019"/>
-  <meta name="description" content="ICABST2019"/>
+  <meta name="keywords" content="ICABST,官网,主页,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP,ICBB,ICBEB,ICBBE" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="robots" content="index,follow" />
+  <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/public.css"/>
   <link rel="stylesheet" href="../css/bootstrap.min.css"/>
