--- a/src/main/resources/templates/page/cn/submit.html
+++ b/src/main/resources/templates/page/cn/submit.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=1200" name="viewport">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>提交参会</title>
-    <meta name="keywords" content="提交参会"/>
-    <meta name="description" content="提交参会"/>
-	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/public.css"/>
-    <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/main-zh.css"/>
-    <link rel="stylesheet" href="../css/global.css"/>
-    <link rel="stylesheet" href="../lib/layui/css/layui.css">
-    <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-    <script type="text/javascript" src="../js/js.js"></script>
-    <script type="text/javascript" src="../js/xadmin.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta content="width=1200" name="viewport">
+  <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+  <title>提交参会</title>
+  <meta name="keywords" content="ICABST,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP,ICBB,ICBEB,ICBBE" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="robots" content="index,follow" />
+  <meta http-equiv="x-dns-prefetch-control" content="on">
+  <link rel="icon" href="../img/icon.png" type="image/x-icon">
+  <link rel="stylesheet" href="../css/public.css"/>
+  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../css/style.css"/>
+  <link rel="stylesheet" href="../css/main-zh.css"/>
+  <link rel="stylesheet" href="../css/global.css"/>
+  <link rel="stylesheet" href="../lib/layui/css/layui.css">
+  <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
+  <script type="text/javascript" src="../js/js.js"></script>
+  <script type="text/javascript" src="../js/xadmin.js"></script>
 </head>
 <body>
 <div class="width-100 all_bg">
