--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta content="width=1200" name="viewport">
   <meta name="shenma-site-verification" content="3f527c71e3b8bd47c35ed86f522b29af_1561971198"> 
 	<meta name="sogou_site_verification" content="hDnpiVhTgo"/>
   <title>ICABST2019</title>
-  <meta name="keywords" content="ICABST2019"/>
-  <meta name="description" content="ICABST2019"/>
+  <meta name="keywords" content="ICABST,Homepage,Home,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia,ICBB,ICBEB,ICBBE" />
+  <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
+  <meta name="robots" content="index,follow" />
+  <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/public.css"/>
   <link rel="stylesheet" href="../css/bootstrap.min.css"/>
