--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta content="width=1200" name="viewport">
 
-  <title>Speakers</title>
-  <meta name="keywords" content="Speakers"/>
-  <meta name="description" content="Speakers"/>
+  <title>Speaker</title>
+  <meta name="keywords" content="ICABST,speakers,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia,ICBB,ICBEB,ICBBE" />
+  <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
+  <meta name="robots" content="index,follow" />
+  <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/public.css"/>
   <link rel="stylesheet" href="../css/bootstrap.min.css"/>
