--- a/src/main/resources/templates/page/en/submit.html
+++ b/src/main/resources/templates/page/en/submit.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=1200" name="viewport">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta content="width=1200" name="viewport">
 
-    <title>Submit</title>
-    <meta name="keywords" content="Submit"/>
-    <meta name="description" content="Submit"/>
-	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/public.css"/>
-    <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/main-zh.css"/>
-    <link rel="stylesheet" href="../css/global.css"/>
-    <link rel="stylesheet" href="../lib/layui/css/layui.css">
-    <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-    <script type="text/javascript" src="../js/js.js"></script>
-    <script type="text/javascript" src="../js/xadmin.js"></script>
+  <title>Submit</title>
+  <meta name="keywords" content="ICABST,submission,submit,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia,ICBB,ICBEB,ICBBE" />
+  <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
+  <meta name="robots" content="index,follow" />
+  <meta http-equiv="x-dns-prefetch-control" content="on">
+  <link rel="icon" href="../img/icon.png" type="image/x-icon">
+  <link rel="stylesheet" href="../css/public.css"/>
+  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../css/style.css"/>
+  <link rel="stylesheet" href="../css/main-zh.css"/>
+  <link rel="stylesheet" href="../css/global.css"/>
+  <link rel="stylesheet" href="../lib/layui/css/layui.css">
+  <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
+  <script type="text/javascript" src="../js/js.js"></script>
+  <script type="text/javascript" src="../js/xadmin.js"></script>
 </head>
 <body>
 <div class="width-100 all_bg">
