--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -180,7 +180,124 @@
         </dd>
         <div class="clear"></div>
       </dl-->
-
+    <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Previous Speakers</div>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/gerardaateshian.jpg"/>
+		  </div>
+		  <dt>Prof. Gerard A. Ateshian</dt>
+		  <dd>Andrew Walz Professor and Chair of Mechanical Engineering & Professor of Biomedical Engineering, Columbia University, USA</dd>
+		  <dd>Gerard Ateshian performs research in the field of soft tissue mechanics, with an emphasis on cartilage mechanics, lubrication, and tissue engineering, and the formulation of growth theories for biological tissues. Ateshian is particularly interested in formulating continuum mechanics theories that accommodate the complexities encountered in living biological tissues and cells, including mass transport, osmotic effects, and reactive mechanics in solid mixtures, needed to describe tissue growth and remodeling. </dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/martynnash.png"/>
+		  </div>
+		  <dt>Prof. Martyn Nash</dt>
+		  <dd>University of Auckland, New Zealand</dd>
+		  <dd>The primary focus of Martyn's research career has been on bioengineering analyses of the heart in order to understand mechanisms and events underlying cardiac electro-mechanical activity in health and disease. He develops and applies novel and efficient computational tools in order to interpret the variety and vast quantity of biological recordings that are available from laboratory and clinical studies. Martyn strives to apply this research to facilitate (i) the development of improved medical imaging, biomedical devices and diagnostic techniques, and (ii) the discovery and monitoring of therapies for prevention and treatment of disease, and better management of patient care.</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/gerhardaholzapfel.jpg"/>
+		  </div>
+		  <dt>Prof. Gerhard A. Holzapfel</dt>
+		  <dd>Norwegian University of Science and Technology (NTNU), Trondheim, Norway</dd>
+		  <dd>Gerhard A. Holzapfel is Adjunct Professor at the Norwegian University of Science and Technology (NTNU), Faculty of Engineering Science and Technology, Trondheim, Norway. He is also Professor of Biomechanics and Head of the Institute of Biomechanics at Graz University of Technology (TUG), Austria, since 2007, and Visiting Professor at the University of Glasgow, Scotland. Until 2013 he was Professor of Biomechanics at the Royal Institute of Technology (KTH) in Stockholm, Sweden, for 9 years (7 years as an Adjunct Professor). After his PhD in Mechanical Engineering in Graz he received an Erwin-Schrödinger Scholarship for foreign countries to be a Visiting Scholar at Stanford University (1993-95).</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/florentginhoux.jpg"/>
+		  </div>
+		  <dt>Dr. Florent Ginhoux</dt>
+		  <dd>Singapore Immunology Network (SIgN), Agency for Science, Technology and Research (A*STAR), Singapore</dd>
+		  <dd>Florent Ginhoux graduated in Biochemistry from the University Pierre et Marie CURIE (UPMC), Paris VI, obtained a Masters degree in Immunology from the Pasteur Institute in 2000 and his PhD in 2004 from UPMC, Paris VI. As a postdoctoral fellow, he joined the Laboratory of Miriam Merad in the Mount Sinai School of Medicine (MSSM), New York. In 2008, he became an Assistant Professor in the Department of Gene and Cell Medicine, MSSM and member of the Immunology Institute of MSSM. He joined the Singapore Immunology Network (SIgN), A*STAR in May 2009 as a Junior Principal Investigator. He is now a Senior Principal Investigator and an EMBO Young Investigator and his laboratory is focusing on the ontogeny and differentiation of macrophages and dendritic cells in both humans and mice. </dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/thomasbraun.jpg"/>
+		  </div>
+		  <dt>Dr. Thomas Braun</dt>
+		  <dd>Professor Of Biostatistics, University of Michigan, USA</dd>
+		  <dd>Thomas Braun received his Ph.D. in Biostatistics from the University of Washington in 1999 and joined the University of Michigan faculty that same year. Dr. Braun's current research interests include: (1) adaptive Phase I trial design methodology, including optimizing schedule of adminstration, accomodating patient heterogeneity, and incorporating multiple toxicity grades; (2) methodology for modeling tooth-level and site-level correlation of teeth in longitudinal dental and periodontal studies, including multivariate longitudinal modeling of clinical attachment level (CAL), pocket depth (PD), and bleeding on probing (BOP), as well as multivariate longitudinal clustering of those outcomes as predictors of site-specific and subject-average progression of oral disease. </dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/kenjiyasuda.jpg"/>
+		  </div>
+		  <dt>Prof. Dr. Kenji Yasuda</dt>
+		  <dd>Tokyo Medical and Dental University, Japan</dd>
+		  <dd>Prof. Dr. Kenji Yasuda received his PhD degree in Physics from Waseda University, Japan in 1995.  Then, he studied Biophysics as a researcher in Advanced Research Laboratory, Hitachi Ltd. Japan until 1999. From 1999 to 2006, he was an associate professor (and full professor from 2006) in University of Tokyo. In 2005, he was also a visiting professor in Genome Technology Center (Prof. R. Davis) at Stanford University for developing nano pipette-based post genome measurement technology. From 2006 to date, he has been a professor in Tokyo Medical and Dental University and PI of a national project of human induced pluripotent stem (iPS) cells for drug discovery technology development. From 2008 to date, he also has been a PI of the research team in Kanagawa Academy of Science and Technology (KAST) to develop the on-chip technologies for characterizing single cells within the networks.</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/benjiaminshaby.png"/>
+		  </div>
+		  <dt>Dr. Benjamin Shaby</dt>
+		  <dd>Assistant Professor, Pennsylvania State University</dd>
+		  <dd>Benjamin Shaby was a postdoc with Cari Kaufman at UC Berkeley. His previous stop was in Durham at the Statistics and Applied Mathematical Institute (SAMSI) and Duke University. He did the Ph.D. work in Statistics at Cornell University with David Ruppert and Marty Wells.Before starting at Cornell, he spent his undergrad years at Stanford. Then he spent two great years working for Chris Field at the Carnegie Institution's Department of Global Ecology, studying inverse problems and the global carbon cycle. He is currently an Assistant Professor in the Statistics Department and the Institute for CyberScience at Penn State, where he started in 2013.</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/hermonasoreq.jpg"/>
+		  </div>
+		  <dt>Prof. Hermona Soreq</dt>
+		  <dd>Alexander Silberman Institute of Life Sciences, Hebrew University, Israel</dd>
+		  <dd>Hermona Soreq is the Charlotte Slesinger Professor of Molecular Biology at the Hebrew University’s Alexander Silberman Institute of Life Sciences and the Edmond and Lily Safra Center for Brain Sciences. A leader in the field of cholinesterase activities and their functions in the brain and periphery, Soreq won honorary PhD degrees from Stockholm (1996), Erlangen-Nuremberg (2007) and Beer-Sheva (2007) as well as an Israeli Ministry of Health Prize (2000), Landau Prize for Biomedical Research (2005), Teva Prize for Molecular Medicine (2006), The Rappaport Prize for Biomedical research (2014), the Katzir Prize for Life Sciences, 2017), the Lise Meitner Alexander Humboldt Research Prize, 2009, an advanced ERC award and two proof-of-concept ERC awards, 2013-2018 and a Neuroinflammation award, 2016.</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/johnhamill.jpg"/>
+		  </div>
+		  <dt>Prof. John Hamill</dt>
+		  <dd>Professor Sustainable Agricultural Systems at Deakin University, Centre for Regional and Rural Futures (CeRRF), Australia</dd>
+		  <dd>John Hamill is currently with Deakin University, Geelong , Australia where, in 2013, he was appointed as Professor of Sustainable Agricultural Systems in the newly formed interdisciplinary research Centre for Regional and Rural Futures (CeRRF). Prior to this he spent more than 20 years at Monash University as a full Professor in the area of Plant Genetics, Tissue Culture and Bio-Technology with a research focus on specialized metabolism (particularly alkaloids), extreme drought tolerance in resurrection plants and, more recently, production of therapeutic proteins and vaccines in transgenic plant systems.</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/peterfthall.jpg"/>
+		  </div>
+		  <dt>Prof. Peter F. Thall</dt>
+		  <dd>The University of Texas MD Anderson Cancer Center, USA</dd>
+		  <dd>He is the Anise J. Sorrell Professor in the Department of Biostatistics at M.D. Anderson Cancer Center, where he has been a Science Faculty member since 1990. He is an author of over 220 papers and book chapters in the statistical and medical literature, and co-authored the 2016 book " Bayesian Designs for Phase I-II Clinical Trials". He has designed hundreds of clinical trials in numerous areas of oncology, including leukemia, sarcomas, stem cell transplantation, cellular therapy, prostate cancer, kidney cancer, thoracic surgery, and brain tumors. His research areas include Bayesian statistics, clinical trial design, medical decision analysis, and dynamic treatment regimes.</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/lislieyyeo.png"/>
+		  </div>
+		  <dt>Prof. Leslie Y. Yeo</dt>
+		  <dd>RMIT University, Australia</dd>
+		  <dd>Prior to joining RMIT, he was a Mathematical Modeller at Det Norske Veritas UK and a postdoctoral research associate in the Department of Chemical & Biomolecular Engineering at the University of Notre Dame, USA, after which he held a faculty position at Monash University. He was the recipient of both the Australian Research Fellowship and Future Fellowship from the Australian Research Council from 2009 to 2017. Leslie is best known for his work on acoustically-driven microfluidics and is the Editor-in-Chief of the American Institute of Physics journal Biomicrofluidics.</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/vassilioskapaklis.jpg"/>
+		  </div>
+		  <dt>Prof. Vassilios Kapaklis</dt>
+		  <dd>University of Uppsala, Sweden</dd>
+		  <dd>Vassilios Kapaklis has an extensive experience in the magnetism of amorphous materials, low-dimensional structures and mesoscopic systems. He leads a group with a strong focus on the magneto-optical properties of magneto-plasmonic systems and ordering and dynamics of mesoscopic spin systems. The research is funded by the Knut and Alice Wallenberg Foundation, as well as the European Union.</dd>
+		  <div class="clear"></div>
+		</dl>
+		<dl>
+		  <div class="fl col-4-4" style="display: table;">
+		    <img src="../img/speakers/alvaroviljoen.jpg"/>
+		  </div>
+		  <dt>Prof. Alvaro Viljoen</dt>
+		  <dd>Tshwane University of Technology, South Africa</dd>
+		  <dd>His research interest includes the phytochemistry and biological activity of medicinal and aromatic plants indigenous to South Africa. Using a metabolomics approach his group aims to resolve various challenges in the pharmacognostic exploration of South Africa’s ethnomedicinal flora. In 2017 he was appointed at the Editor-in Chief of the Journal of Ethnopharmacology. In October 2013 he was awarded the National Research Chair in Phytomedicine a position which he hold concurrently as Director of the SAMRC Herbal Drugs Research Unit in South Africa.</dd>
+		  <div class="clear"></div>
+		</dl>
     </div>
 
     <div class="page_right col-4-1 fr mr-25">
