--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -208,6 +208,7 @@ var _hmt = _hmt || [];
 			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
 			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/10--billetto.png"/></a></li>
 			<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
+			<li><a href="http://meeting.dxy.cn/article/620176" target="_blank"><img src="../img/12--dingxiang.png"/></a></li>
       <div class="clear"></div>
     </ul>
   </div>
