--- a/src/main/resources/templates/page/en/organizer.html
+++ b/src/main/resources/templates/page/en/organizer.html
@@ -109,7 +109,6 @@ var _hmt = _hmt || [];
 				<div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px; font-family:'Times New Roman';">Scientific Committee</div>
 				<div class="public_p pb-20 pl-30 lh-20">
 					<p>
-					Abdullah Al Mamun, IIUM Gombak, Malaysia <br/>
 					Andrea Scribante, University of Pavia, Italy <br/>
 					Anna Ardévol, Universitat Rovira i Virgili, Spain <br/>
 					Ching-An Peng, University of Idaho, USA <br/>
@@ -166,6 +165,7 @@ var _hmt = _hmt || [];
 				<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
 				<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
 				<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
+				<li><a href="http://meeting.dxy.cn/article/620176" target="_blank"><img src="../img/12--dingxiang.png"/></a></li>
         <div class="clear"></div>
       </ul>
       </div>
