增加百度统计功能

--- a/src/main/resources/templates/page/cn/article.html
+++ b/src/main/resources/templates/page/cn/article.html
@@ -399,7 +399,6 @@ var _hmt = _hmt || [];
 
 </div>
 
-<!--footer-->
 <footer class="main-footer">
     <div class="text-center lh-36 footer w-1200">
         <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
@@ -550,5 +549,20 @@ var _hmt = _hmt || [];
 
 
 </div>
+<script>
+(function(){
+    var bp = document.createElement('script');
+    var curProtocol = window.location.protocol.split(':')[0];
+    if (curProtocol === 'https') {
+        bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+    }
+    else {
+        bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+    }
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+})();
+</script>
+
 </body>
 </html>
