--- a/src/main/resources/templates/page/cn/submit.html
+++ b/src/main/resources/templates/page/cn/submit.html
@@ -15,7 +15,7 @@ var _hmt = _hmt || [];
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta content="width=1200" name="viewport">
   <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-  <title>提交参会</title>
+  <title>ICABST参会报名|提交参会--2019国际前沿生物科学与技术国际会议(ICABST2019),泰国生物会议</title>
   <meta name="keywords" content="ICABST,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP,ICBB,ICBEB,ICBBE" />
   <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
