--- a/src/main/resources/templates/page/en/organizer.html
+++ b/src/main/resources/templates/page/en/organizer.html
@@ -136,14 +136,10 @@ var _hmt = _hmt || [];
 					Alex Liu, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					AMAL AL-ABOUDI, University of Jordan, Jordan <br/>
 					Ivaylo Christov, Institute of Biophysics and Biomedical Engineering, Bulgaria <br/>
-					Katarzyna Hys, Opole University of Technology, Poland <br/>
 					Kesaven Bhubalan, Universiti Malaysia Terengganu, Malaysia <br/>
 					Le Nguyen Quoc Khanh, Nanyang Technological University, Singapore <br/>
 					Leyser Rodrigues Oliveira University Centre of Formiga, Brazil <br/>
-					Maria Prados-Privado, Universidad Carlos III de Madrid, Spain <br/>
 					Midhat Nabil Ahmad Salimi, Universiti Malaysia Perlis (UniMAP), Malaysia <br/>
-					Mohsen Sharifi, US-FDA , United States <br/>
-					Müberra YÜKSEL, Kadir Has University, Turkey <br/>
 					Pajaree Thongsanit, Naresuan University, Thailand <br/>
 					Palanisamy Sivanandy, International Medical University(IMU), Malaysia<br/>
 					Roshni Paul, Birmingham City University, UK
@@ -166,6 +162,7 @@ var _hmt = _hmt || [];
 				<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
 				<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
 				<li><a href="http://meeting.dxy.cn/article/620176" target="_blank"><img src="../img/12--dingxiang.png"/></a></li>
+				<li><a href="https://www.science-community.org/en/node/205354" target="_blank"><img src="../img/13--science-committee.png"/></a></li>
         <div class="clear"></div>
       </ul>
       </div>
