--- a/src/main/resources/templates/page/en/venue.html
+++ b/src/main/resources/templates/page/en/venue.html
@@ -82,7 +82,7 @@ var _hmt = _hmt || [];
       <div class="background3" style="padding-left:80px; line-height: 60px; padding-bottom: 8px;">&nbsp;&nbsp;Venue</div>
       <div class="public_p pb-20 pl-30">
 				<p class="f-b">Hotel Name: The Tawana Bangkok, <a class="pointer" href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a><br/>
-				Address: 80 Surawongse Road, Bangrak, Bankok 10500 Thailand<br/>
+				Address: 80 Surawongse Road, Bangrak, Bangkok 10500 Thailand<br/>
 				Conference Room: Murano Room<br/>
 				You could book the room by <a href="https://www.booking.com/hotel/th/tawana.zh-cn.html?aid=1633942;label=baidu-brand-list1;sid=a0ff97e5e37d5edbc4ed57d5453febf3;dest_id=-3414440;dest_type=city;dist=0;hapos=1;hpos=1;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1560999642;srpvid=de89152dd7440131;type=total;ucfs=1&#hotelTmpl" style="color: #102cf7" target="_blank"><u>www.booking.com</u></a>
 				</p>
