修改文本内容

--- a/src/main/resources/templates/page/en/organizer.html
+++ b/src/main/resources/templates/page/en/organizer.html
@@ -13,10 +13,10 @@ var _hmt = _hmt || [];
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta content="width=1200" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 
   <title>ICABST Organization|Organizers--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
-  <meta name="keywords" content="ICABST,Organizer,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia,ICBB,ICBEB,ICBBE" />
+  <meta name="keywords" content="ICABST,Organizer,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
   <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
