--- a/src/main/resources/templates/page/cn/submit.html
+++ b/src/main/resources/templates/page/cn/submit.html
@@ -94,7 +94,7 @@ var _hmt = _hmt || [];
                             <strong>一、个人信息（*为必填）</strong>
                         </div>
                             <div class="layui-form-item pr-20">
-                                <input type="hidden" id="uploadFileUrlID" name="uploadFileUrl" required lay-verify="required"
+                                <input type="hidden" id="uploadFileUrlID" name="uploadFileUrl"
                                    autocomplete="off" class="layui-input">
                                 <label for="usernameId" class="layui-form-label">
                                     <span class="x-red">*</span>姓名
